# A-Dual-Architecture-NLP2SQL-Agent-System-

./: .gitignore  README.md  README_vi.md  main.py  pyproject.toml  requirements.txt  run_baseline.sh  run_query_gpt.sh
baseline_system/: app_baseline.py
baseline_system/agents/: analyzer_agent.py  chart_agent.py  sql_agent.py
baseline_system/semantic/: __init__.py  column_matcher.py  keyword_dicts.py  semantic_analyzer.py
baseline_system/tools/: chart_tools.py  sql_tools.py
baseline_system/utils/: csv_helpers.py
benchmark/: run_eval_baseline.py  run_eval_query_gpt.py
data-code/InfiAgent/: Readme.md
query_gpt_system/: app_query_gpt.py
query_gpt_system/core_agents/: column_pruner.py  genai_gateway.py  intent_agent.py  prompt_enhancer.py  sql_sample_retriever.py  table_agent.py
query_gpt_system/executor/: sql_engine.py
query_gpt_system/metadata/: build_workspaces.py  schema_builder.py  schema_registry.json  workspaces.json
query_gpt_system/sql_samples/: ingest_samples.py
