[project]
name = "data-agen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=2.6.20",
    "chromadb>=1.5.9",
    "duckdb>=1.5.4",
    "matplotlib>=3.11.0",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "tabulate>=0.10.0",
]
